--- a/doc/slice/cslice.man
+++ b/doc/slice/cslice.man
@@ -17,25 +17,31 @@ items visible at script level.
 packages, as a means to provide access to parts of their internal
 data, assuming that they are (conceptually) an array.
 
-[para] To support this the package provide its C API by means of a
+[para] To support this the package provides its C API by means of a
 stubs table which can be imported.
 
 [section API]
 [list_begin definitions]
 
 [comment {- - -- --- ----- -------- ------------- ---------------------}]
-[call [type CSLICE] [fun cslice_create] ( [type CSLICE_DIRECTION] [arg dir], [type void**] [arg cells], [type int] [arg n] )]
+[call [type CSLICE] [fun cslice_create] ( [type CSLICE_DIRECTION] [arg dir], \
+	[type void**] [arg cells], \
+	[type int] [arg n] )]
 
 This function creates and initializes a slice object with the
 specified slice of an array of cells. The return value of the function
 is the handle of the new slice object.
 
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
 [call void [fun cslice_destroy] ( [type CSLICE] [arg s] )]
 
-This function destroy the specified slice object, releasing all
+This function destroys the specified slice object, releasing all
 allocated memory.
 
-[call void [fun cslice_get] ( [type CSLICE] [arg s], [type void***] [arg cells], [type int*] [arg n] )]
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call void [fun cslice_get] ( [type CSLICE] [arg s], \
+	[type void***] [arg cells], \
+	[type int*] [arg n] )]
 
 This function provides access to the slice of cells contained in the
 specified slice object.
