--- a/doc/stack/stack.man
+++ b/doc/stack/stack.man
@@ -1,120 +1,160 @@
-[manpage_begin struct::stack n 1.5.1]
-[moddesc   {Tcl Data Structures}]
-[titledesc {Create and manipulate stack objects}]
-[category  {Data structures}]
-[require Tcl 8.4]
-[require struct::stack [opt 1.5.1]]
+[manpage_begin struct::stack n 2]
+[include ../include/general.inc]
+[titledesc {Create and manipulate stacks}]
+[require struct::stack [opt 2]]
+[keywords  stack lifo]
 [description]
+[include ../include/welcome.inc]
+[comment {= = == === ===== ======== ============= =====================}]
 
-The [namespace ::struct] namespace contains a commands for processing
-finite stacks.
+This manpage documents the API used by all implementations of the
+[package struct::stack] commands for the creation and handling of
+stack objects.
 
-[para]
+[para] The various implementations may depend on different packages
+however, although Tcl version 8.5 or higher is a minimum requirement
+for all.
 
-It exports a single command, [cmd ::struct::stack]. All functionality
-provided here can be reached through a subcommand of this command.
+[comment {= = == === ===== ======== ============= =====================}]
+[section {Class API}]
 
-[para]
-
-[emph Note:] As of version 1.3.3 of this package a critcl based C
-implementation is available. This implementation however requires Tcl
-8.4 to run.
-
-[para]
-
-The [cmd ::struct::stack] command creates a new stack object with an
-associated global Tcl command whose name is [emph stackName].  This
-command may be used to invoke various operations on the stack.  It has
-the following general form:
+The [namespace ::struct] namespace contains a single command with
+multiple methods for the creation of stack objects. These are:
 
 [list_begin definitions]
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [cmd {::struct stack}] [method new]]
 
-[call [arg stackName] [cmd option] [opt [arg "arg arg ..."]]]
+This class method creates a new stack instance with an associated
+global Tcl command and returns the fully qualified name of this
+command. The name is auto-generated and of the form
+[const ::struct::stack][var N] where [var N] is a random integer
+number.
 
-[arg Option] and the [arg arg]s determine the exact behavior of the
-command.  The following commands are possible for stack objects:
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [cmd {::struct stack}] [method create] [arg name]]
 
-
-[call [arg stackName] [method clear]]
-
-Remove all items from the stack.
-
-
-[call [arg stackName] [method destroy]]
-
-Destroy the stack, including its storage space and associated command.
-
-
-[call [arg stackName] [method get]]
-
-Returns the whole contents of the stack as a list, without removing
-them from the stack.
-
-[call [arg stackName] [method getr]]
-
-A variant of [method get], which returns the contents in reversed order.
-
-[call [arg stackName] [method peek] [opt [arg count]]]
-
-Return the top [arg count] items of the stack, without removing them from
-the stack.  If [arg count] is not specified, it defaults to 1.  If
-[arg count] is 1, the result is a simple string; otherwise, it is a
-list.  If specified, [arg count] must be greater than or equal to 1.
-
-If there are not enoughs items on the stack to fulfull the request,
-this command will throw an error.
-
-[call [arg stackName] [method peekr] [opt [arg count]]]
-
-A variant of [method peek], which returns the items in reversed order.
-
-[call [arg stackName] [method trim] [opt [arg newsize]]]
-
-Shrinks the stack to contain at most [arg newsize] elements and
-returns a list containing the elements which were removed. Nothing is
-done if the stack is already at the specified size, or smaller. In
-that case the result is the empty list.
-
-[call [arg stackName] [method trim*] [opt [arg newsize]]]
-
-A variant of [method trim] which performs the shrinking, but does not
-return the removed elements.
-
-[call [arg stackName] [method pop] [opt [arg count]]]
-
-Return the top [arg count] items of the stack, and remove them
-from the stack.  If [arg count] is not specified, it defaults to 1.
-If [arg count] is 1, the result is a simple string; otherwise, it is a
-list.  If specified, [arg count] must be greater than or equal to 1.
-
-If there are not enoughs items on the stack to fulfull the request,
-this command will throw an error.
-
-
-[call [arg stackName] [method push] [arg item] [opt [arg item...]]]
-
-Push the [arg item] or items specified onto the stack.  If more than
-one [arg item] is given, they will be pushed in the order they are
-listed.
-
-
-[call [arg stackName] [method size]]
-
-Return the number of items on the stack.
+This class method creates a new stack instance with an associated
+global Tcl command and returns the fully qualified name of this
+command. The [arg name] is chosen by the user and provided as the
+argument of the method.
 
 [list_end]
 
-[section {BUGS, IDEAS, FEEDBACK}]
+[comment {= = == === ===== ======== ============= =====================}]
+[section {Instance API}]
 
-This document, and the package it describes, will undoubtedly contain
-bugs and other problems.
+All instances of stacks created through the [sectref {Class API}]
+support the following API:
 
-Please report such in the category [emph {struct :: stack}] of the
-[uri {http://sourceforge.net/tracker/?group_id=12883} {Tcllib SF Trackers}].
+[list_begin definitions]
 
-Please also report any ideas for enhancements you may have for either
-package and/or documentation.
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method destroy]]
 
+This method destroys the stack instance and the associated Tcl
+command, releasing any associated resurces.
 
-[keywords queue matrix tree graph]
+[para] The method returns the empty as its result.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method size]]
+
+This method returns the number of elements stored in the stack.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method get]]
+
+This method returns all elements stored in the stack as a list,
+without removing them from the stack. The topmost element is returned
+as the first element of the list, while the bottom-most element is the
+last.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method getr]]
+
+This method is a variant of method [method get] which returns the
+elements in reversed order. This means that the topmost element is
+returned as the last element of the list, while the bottom-most
+element is the first.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method peek] [opt [arg count]]]
+
+This method returns the top [arg count] elements of the stack, without
+removing them from the stack. The count defaults to [const 1].
+
+[para] If more than one element is requested the result will be a list
+of elements, with the topmost element of the stack as the first
+element of the result. If only one element is requested the result is
+that element.
+
+[para] An error will be thrown if the stack does not hold enough
+elements to satisfy the request, i.e. less than [arg count] elements.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method peekr] [opt [arg count]]]
+
+This method is a variant of method [method peek] which returns the
+requested items in reversed order. This means that the topmost element
+is returned as the last element of the list.
+
+[para] For [arg count] == [const 1] there is no difference, of course.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method pop] [opt [arg count]]]
+
+This method returns the top [arg count] items of the stack, and
+removes them from the stack. The count defaults to [const 1].
+
+[para] If more than one element is requested the result will be a list
+of elements, with the topmost element of the stack as the first
+element of the result. If only one element is requested the result is
+that element.
+
+[para] An error will be thrown if the stack does not hold enough
+elements to satisfy the request, i.e. less than [arg count] elements.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method clear]]
+
+This method removes all elements from the stack.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method trim] [opt [arg newsize]]]
+
+This method shrinks the stack to contain at most [arg newsize]
+elements and returns a list containing the elements which were
+removed. Nothing is done if the stack is already at the specified
+size, or smaller. In that case the result is the empty list.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method trim*] [opt [arg newsize]]]
+
+This method is a variant of method [method trim] which does not return
+the removed elements, and only performs any necessary shrinking.
+
+[comment {- - -- --- ----- -------- ------------- ---------------------}]
+[call [arg stackObj] [method push] [arg item] [opt [arg item...]]]
+
+This method pushes the specified [arg item] or items onto the stack.
+If more than one [arg item] is given, they will be pushed in the order
+they are listed.
+
+[list_end]
+
+[comment {= = == === ===== ======== ============= =====================}]
+[section {Implementations}]
+[subsection {critcl v3.1, critcl::class 1.0.1}]
+
+This is a C implementation of the API depending on the packages
+[package c::slice] and [package c::stack].
+
+[subsection {pure Tcl}]
+
+This is a pure Tcl implementation of the API depending on the package
+[package TclOO].
+
+[include ../include/license.inc]
+[include ../include/feedback.inc]
 [manpage_end]
