--- a/doc/cstack/cstack.man
+++ b/doc/cstack/cstack.man
@@ -16,8 +16,9 @@ at script level.
 
 [para] The package is meant to be used by other C level data structure
 packages, either internally, or providing a Tcl level API to it. An
-example of the latter is the C implementation of package
-[package struct::stack].
+example of the former is the package [package c::queue] which uses
+several stacks inside of each queue. An example of the latter is the C
+implementation of package [package struct::stack].
 
 [para] To support this the package provides its C API by means of a
 stubs table which can be imported.
@@ -89,12 +90,12 @@ returning the indexed cell in the stack.
 [para] index [const 0]         addresses the bottommost cell.
 
 [comment {- - -- --- ----- -------- ------------- ---------------------}]
-[call void [fun cstack_get] ( [type CSTACK] [arg s], \
+[call [type CSLICE] [fun cstack_get] ( [type CSTACK] [arg s], \
       [type {long int}] [arg at], \
       [type {long int}] [arg n] )]
 
 This function returns the [arg n] cells starting at index [arg at] in
-the stack as a slice, with the topmost cell of the slice as the last
+the stack as a slice, with the topmost cell of the stack as the last
 element of the slice (natural internal order).
 
 [para] The indexing is the same as for function [fun cstack_at] above.
@@ -102,7 +103,7 @@ element of the slice (natural internal order).
 [para] index 'cstack_size()-1' addresses the bottommost cell.
 
 [comment {- - -- --- ----- -------- ------------- ---------------------}]
-[call void [fun cstack_getr] ( [type CSTACK] [arg s], \
+[call [type CSLICE] [fun cstack_getr] ( [type CSTACK] [arg s], \
       [type {long int}] [arg at], \
       [type {long int}] [arg n] )]
 
@@ -114,7 +115,7 @@ returning the indexed slice in the stack.
 [para] index [const 0]         addresses the bottommost cell.
 
 [para] Note that this does not affect the ordering in the slice
-itself, which has the topmost cell of the slice as the last element of
+itself, which has the topmost cell of the stack as the last element of
 the slice (natural internal order).
 
 [comment {- - -- --- ----- -------- ------------- ---------------------}]
@@ -161,7 +162,7 @@ cells. If the stack had less cells to begin with nothing is done.
 [call void [fun cstack_drop] ( [type CSTACK] [arg s], \
       [type {long int}] [arg n] )]
 
-This function removes the [arg n] topmost cells from the stack.
+This function drops the [arg n] topmost cells from the stack.
 
 [para] [emph Note:] The cell release function is [emph not] called for
 the removed cells. This is in contrast to function [fun cstack_pop]
@@ -188,12 +189,12 @@ This function rotates the [arg n] topmost cells in the stack by
       [type CSTACK] [arg src], \
       [type {long int}] [arg n] )]
 
-This function moves the topmost [arg n] cells in the stack [arg src]
-to the stack.
+This function moves the [arg n] topmost cells in the stack [arg src]
+to the stack [arg s]. This reverses their order.
 
 As the cells are not destroyed the release function is not called.
 
-[para] As a basic precaution the release functions of both stack are
+[para] As a basic precaution the release functions of both stacks are
 compared, and have to match. The code will assert this and panic if
 the condition is not true.
 
